Añadido formulario de pre-aprobación mediante iframe

--- a/pages/pre-approved/pre-approved.html
+++ b/pages/pre-approved/pre-approved.html
@@ -33,11 +33,18 @@
   </div>
   <div class="financing-widget">
     <div class="wrapper" id="financing_form">
-      <div id="ez_leads_financing"></div>
+      <!-- <div id="ez_leads_financing"></div> -->
+      <iframe 
+        style="display: flex; width: 100%; height: 1200px;" 
+        src="https://secure.vinmanagersites.com/FinanceApplication.aspx?websiteid=21992#page=ctl01_pnlFinanceApplication1&coapp=undefined"
+        >
+
+      </iframe>
     </div>
   </div>
   <script
     async
     type="application/javascript"
     :src="`${api_url}/financing.js`"></script>
+
 </section>
