--- a/pages/inventory/_slug/index.html
+++ b/pages/inventory/_slug/index.html
@@ -75,13 +75,14 @@
               <span>Monthly Payment</span>
             </div>
             <div class='price'>
-              <span>${{ discount }}</span>
+              <span>${{ discount.toLocaleString('es') }}</span>
               <div class='price-content'>
-                <span v-if=' Car.RetailPrice.Value > 0'>{{ !Campaign.has ? 'Price balance' : 'Price' }}</span>
-                <div class='terms' v-if='!Campaign.has'>
-                  <small>(terms)</small>
-                  <div class='disclaimer-box am-slim-scroll'>
-                    <AmPriceBalanceDisclaimer :price='Car.RetailPrice.Value'/>
+                  <span v-if=' Car.RetailPrice.Value > 0'>{{ !Campaign.has ? 'Sale price' : 'Price' }}</span>
+                  <div class='terms' v-if='!Campaign.has'>
+                      <small>(terms)</small>
+                      <div class='disclaimer-box am-slim-scroll'>
+                          <!-- Cambio: Cambiar "price balance" a "sale price" -->
+                          <AmPriceBalanceDisclaimer :price='Car.RetailPrice.Value' />
                   </div>
                 </div>
               </div>
