reemplazo de price balance, por sale price

--- a/pages/catalog/_vin/index.html
+++ b/pages/catalog/_vin/index.html
@@ -80,7 +80,7 @@
                   <div class='terms' v-if='!Campaign.has'>
                       <small>(terms)</small>
                       <div class='disclaimer-box am-slim-scroll'>
-                          <!-- Cambio: Cambiar "price balance" a "sale price" -->
+                          <!-- Cambio: Cambiar "Sale price" a "sale price" -->
                           <AmPriceBalanceDisclaimer :price='Car.RetailPrice.Value' />
                       </div>
                   </div>
