--- a/pages/termsCondition/termsCondition.html
+++ b/pages/termsCondition/termsCondition.html
@@ -729,7 +729,7 @@
     <div class="am-row">
       <div class="top">
         <h3>17.</h3>
-        <h3>Price balance</h3>
+        <h3>Sale price</h3>
       </div>
       <div class="bottom">
 
