--- a/pages/inventory/_slug/index.html
+++ b/pages/inventory/_slug/index.html
@@ -81,7 +81,7 @@
                   <div class='terms' v-if='!Campaign.has'>
                       <small>(terms)</small>
                       <div class='disclaimer-box am-slim-scroll'>
-                          <!-- Cambio: Cambiar "price balance" a "sale price" -->
+                          <!-- Cambio: Cambiar "Sale price" a "sale price" -->
                           <AmPriceBalanceDisclaimer :price='Car.RetailPrice.Value' />
                   </div>
                 </div>
