--- a/pages/home/home.html
+++ b/pages/home/home.html
@@ -30,11 +30,11 @@
       </div>
     </div>
   </div>
-  <div class="recently">
+  <!-- <div class="recently">
     <div class="wrapper">
       <AmCarRecently/>
     </div>
-  </div>
+  </div> -->
   <div class="first-buyer">
     <div class="wrapper">
       <div class="left">
